module8/myhttpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - image: lefoco/httpserver:v1.0
          name: httpserver
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
          livenessProbe:  
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          readinessProbe: 
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          resources:  
            limits:
              cpu: "100m"
              memory: "100Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
