module8/myservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: myservice
spec:
  selector:
    app: httpserver
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
